docs:  updating env example

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 # Certifique-se de possuir um database com nome "nuven_api" criado no Postgres ou se possuir outro nome, altere para adequar ao seu.
 DATABASE_URL=postgresql://usuario:senha@localhost:5432/nuven_api
 PORT=3000
+
+JWT_SECRET="JWT_SECRET"
+HUGGING_TOKEN="SEU_TOKEN"
