--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@huggingface/hub": "^2.4.0",
+    "@huggingface/inference": "^4.5.3",
+    "@huggingface/mcp-client": "^0.2.2",
     "@prisma/client": "^6.12.0",
+    "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
